fix(BlueJeans): fix title section alignment

--- a/themes/ovh/static/css/components/topguides.css
+++ b/themes/ovh/static/css/components/topguides.css
@@ -66,7 +66,7 @@
 
 .top-guides {
   background-color: #F5FEFF;
-  padding: 3rem 2rem 1.5rem;
+  padding: 3rem 0 1.5rem;
 }
 
 .top-guides__title {
@@ -74,6 +74,7 @@
   font-weight: 700;
   color: #00185E;
   margin-bottom: 28px;
+  text-align: center;
 }
 
 .top-guide {
@@ -149,6 +150,7 @@
   }
 
   .top-guides__title {
+    text-align: left;
     margin-left: 8rem;
   }
 
