--- a/themes/ovh/static/css/home.css
+++ b/themes/ovh/static/css/home.css
@@ -1,3 +1,7 @@
+#homepage {
+	max-width: 1380px;
+	margin: 0 auto;
+}
 #homepage > div {
 	list-style: outside none none;
 	padding: 0 5 !important;
@@ -108,6 +112,6 @@
 @media (min-width: 768px) {
   #homepage .section-title {
   	text-align: left;
-    margin-left: 10rem;
+    padding-left: 8rem;
   }
 }
